--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,103 @@
 :root{
-    
-    
+    --Soft-blue: hsl(215, 51%, 70%);
+    --Cyan: hsl(178, 100%, 50%);
+    --main-BG: hsl(217, 54%, 11%);
+    --card-BG: hsl(216, 50%, 16%);
+    --line: hsl(215, 32%, 27%);
+    --White: hsl(0, 0%, 100%);
+}
+html{
+    box-sizing: border-box;
+    font-family: "Outfit" sans-serif;
 
 }
 body{
-
+  background-color: var(--card-BG);
+  font-size: 18px;
 }
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    
+}
+.principal{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
+}
+.card{
+    max-width: 320px;
+    border-radius: 1em;
+    padding: 30px;
+    background-color: var(--line);
+    
+}
+.photo{
+   
+    border-radius: 0.5em;
+    overflow: hidden;
+}
+.photo img{
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5em;
+}
+.titulo{
+    color: var(--White);
+    font-size: xx-large;
+    padding: 20px 0px;
+}
+.padre{
+    display: flex;
+}
+.hijo{
+    width: 100%;
+    height: 100%;
+    padding-top: 20px;
+    padding-bottom: 10px;
+     gap: 0.5em;
+    display: flex;
+    align-items: center;
+
+}
+.hijo:nth-child(1){
+    color: var(--Cyan);
+}
+.hijo:nth-child(2){
+    color: var(--Soft-blue);
+    display: flex;
+   justify-content: right;
+}
+.person{
+         display: flex;
+         align-items: center;
+}
+
+.person img{
+    width: 10%;
+    height: 10%;
+   border-color: var(--White);
+   border-style: solid;
+   border-radius: 50%;
+    
+}
+.text2{
+    color: var(--Soft-blue);
+    font-size: medium;
+}
+.creation{
+    color: var(--Soft-blue);
+    padding: 0px 10px 0px 15px;
+}
+.nombre{
+    color: var(--White);
+}
+.linea{
+   background-color:  var(--White);
+     margin-top: 10px;
+     margin-bottom: 10px;
+     padding: 0.05px;
 }
